[gd_scene load_steps=4 format=3 uid="uid://bj2drrivwhsj4"]

[ext_resource type="Script" path="res://Tutorials/Tutorial_button.gd" id="1_lrqo6"]
[ext_resource type="Texture2D" uid="uid://b5bt28tp6agyy" path="res://assets/tutorial.png" id="2_smqh0"]
[ext_resource type="Texture2D" uid="uid://ddxyogcxd6ulk" path="res://assets/lock.png" id="2_xs3fm"]

[node name="Tutorial_button" type="Control"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1670.0
offset_bottom = -767.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lrqo6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -29.0
offset_right = 293.0
offset_bottom = 250.0
texture = ExtResource("2_smqh0")
expand_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 11.0
offset_right = 225.0
offset_bottom = 202.0
theme_override_font_sizes/font_size = 30
text = "Tutorial"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 250.0
texture_disabled = ExtResource("2_xs3fm")

[connection signal="button_down" from="Button" to="." method="_on_button_down"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
